Feat: monorepo setup

--- a/package.json
+++ b/package.json
@@ -2,5 +2,6 @@
   "private": true,
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "packageManager": "yarn@4.6.0+sha224.acd0786f07ffc6c933940eb65fc1d627131ddf5455bddcc295dc90fd"
 }
